--- a/nginx.conf
+++ b/nginx.conf
@@ -47,6 +47,7 @@ http {
         # Static assets caching
         location /static/ {
             alias /usr/share/nginx/html/static/;
+            try_files $uri $uri/ =404;
             expires 1d;
             access_log off;
         }
