Switch_To_Single_Container_Architecture_For_Render

--- a/nginx.conf
+++ b/nginx.conf
@@ -18,16 +18,9 @@ http {
 
     # Upstream backend (FastAPI)
     upstream backend_api {
-        # Render will provide the internal hostname, but for simplicity in a 
-        # multi-service Render setup, we often point to the backend service URL.
-        # However, in standard Nginx on Render, we might need to use the environment variable 
-        # or a hardcoded service name if they are in a private network.
-        # For this specific setup, we'll assume the backend is reachable at 'fyp-backend:8000' 
-        # if using Render's private networking, OR we use a variable.
-        
-        # IMPORTANT: In a real Render Blueprint with private networking, the service name 'fyp-backend'
-        # resolves to the internal IP.
-        server fyp-backend:8000; 
+        # Since we are running in a single container (Nginx + Uvicorn),
+        # the backend is available on localhost:8000
+        server 127.0.0.1:8000;
     }
 
     server {
