Add_Rate_Limiting_To_Nginx_And_Clarify_SSL_Handling

--- a/nginx.conf
+++ b/nginx.conf
@@ -16,6 +16,9 @@ http {
     add_header X-XSS-Protection "1; mode=block";
     add_header X-Content-Type-Options "nosniff";
 
+    # Rate Limiting: 10 requests/second per IP, with a burst of 20
+    limit_req_zone $binary_remote_addr zone=api_limit:10m rate=10r/s;
+
     # Upstream backend (FastAPI)
     upstream backend_api {
         # Since we are running in a single container (Nginx + Uvicorn),
@@ -48,6 +51,9 @@ http {
         # API Reverse Proxy
         # Forward requests starting with /api/ to the Python backend
         location /api/ {
+            # Apply Rate Limiting
+            limit_req zone=api_limit burst=20 nodelay;
+
             proxy_pass http://backend_api;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
