--- a/nginx.conf
+++ b/nginx.conf
@@ -40,9 +40,18 @@ http {
             try_files $uri $uri/ /index.html;
         }
 
+        # Explicitly serve reset_password.html with no caching to fix redirect issues
+        location = /static/pages/reset_password.html {
+            root /usr/share/nginx/html;
+            try_files $uri =404;
+            add_header Cache-Control "no-store, no-cache, must-revalidate, max-age=0";
+            add_header Pragma "no-cache";
+            expires -1;
+        }
+
         # Static assets caching
         location /static/ {
-            alias /usr/share/nginx/html/static/;
+            root /usr/share/nginx/html;
             try_files $uri $uri/ =404;
             expires 1d;
             access_log off;
