--- a/nginx.conf
+++ b/nginx.conf
@@ -40,19 +40,17 @@ http {
             try_files $uri $uri/ /index.html;
         }
 
-        # Explicitly serve reset_password.html with no caching to fix redirect issues
-        location = /static/pages/reset_password.html {
-            try_files $uri =404;
-            add_header Cache-Control "no-store, no-cache, must-revalidate, max-age=0";
-            add_header Pragma "no-cache";
-            expires -1;
-        }
-
         # Static assets caching
         location /static/ {
-            try_files $uri $uri/ =404;
+            # Removed redundant root directive as it inherits from server block
+            # Removed try_files fallback to avoid redirect loops or blank pages
+            # If file exists, serve it. If not, 404.
+            try_files $uri =404;
             expires 1d;
             access_log off;
+            
+            # Allow CORS for static assets if needed
+            add_header Access-Control-Allow-Origin *;
         }
 
         # API Reverse Proxy
