Refactor_To_Two_Services_Frontend_Backend_Split

--- a/nginx.conf
+++ b/nginx.conf
@@ -21,9 +21,10 @@ http {
 
     # Upstream backend (FastAPI)
     upstream backend_api {
-        # Since we are running in a single container (Nginx + Uvicorn),
-        # the backend is available on localhost:8000
-        server 127.0.0.1:8000;
+        # When using Render's private network, the backend service is available at:
+        # http://<service-name>:<port>
+        # The name must match the backend service name in render.yaml
+        server fyp-backend:8000;
     }
 
     server {
