--- a/render.yaml
+++ b/render.yaml
@@ -12,7 +12,7 @@ services:
         sync: false
       - key: SECRET_KEY
         sync: false
-      - key: OPENAI_API_KEY
+      - key: MISTRAL_API_KEY
         sync: false
 
   # Frontend Service (Nginx Proxy)
