Fix_Nginx_Host_Not_Found_With_Runtime_Resolution

--- a/nginx.conf
+++ b/nginx.conf
@@ -8,6 +8,10 @@ http {
     include       mime.types;
     default_type  application/octet-stream;
     
+    # Use Docker's embedded DNS resolver
+    resolver 127.0.0.11 valid=30s;
+
+    # Basic Settings
     sendfile        on;
     keepalive_timeout  65;
 
@@ -20,16 +24,19 @@ http {
     limit_req_zone $binary_remote_addr zone=api_limit:10m rate=10r/s;
 
     # Upstream backend (FastAPI)
-    upstream backend_api {
-        # When using Render's private network, the backend service is available at:
-        # http://<service-name>:<port>
-        # The name must match the backend service name in render.yaml
-        server fyp-backend:8000;
-    }
+    # Note: We use a variable in proxy_pass to force Nginx to re-resolve the DNS
+    # if the backend IP changes, and to prevent startup failure if backend is not ready.
+    # The resolver directive in http block handles the DNS lookup.
 
     server {
         listen 80;
         server_name localhost;
+
+        # Health check endpoint for Render
+        location /healthz {
+            return 200 'OK';
+            add_header Content-Type text/plain;
+        }
 
         # Serve static frontend files directly (Fast & Efficient)
         root /usr/share/nginx/html;
@@ -57,10 +64,13 @@ http {
         # API Reverse Proxy
         # Forward requests starting with /api/ to the Python backend
         location /api/ {
+            # Use a variable to force DNS resolution at runtime
+            set $backend_upstream "http://fyp-backend:8000";
+            
             # Apply Rate Limiting
             limit_req zone=api_limit burst=20 nodelay;
 
-            proxy_pass http://backend_api;
+            proxy_pass $backend_upstream;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
