Fix_Nginx_Remaining_Upstream_Refs

--- a/nginx.conf
+++ b/nginx.conf
@@ -32,6 +32,10 @@ http {
         listen 80;
         server_name localhost;
 
+        # Use a variable to force DNS resolution at runtime for backend
+        # This prevents Nginx from crashing if the backend service is not ready
+        set $backend_upstream "http://fyp-backend:8000";
+
         # Health check endpoint for Render
         location /healthz {
             return 200 'OK';
@@ -64,9 +68,6 @@ http {
         # API Reverse Proxy
         # Forward requests starting with /api/ to the Python backend
         location /api/ {
-            # Use a variable to force DNS resolution at runtime
-            set $backend_upstream "http://fyp-backend:8000";
-            
             # Apply Rate Limiting
             limit_req zone=api_limit burst=20 nodelay;
 
@@ -86,13 +87,13 @@ http {
 
         # Docs Reverse Proxy (Swagger UI)
         location /docs {
-            proxy_pass http://backend_api/docs;
+            proxy_pass $backend_upstream/docs;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
         }
 
         location /openapi.json {
-            proxy_pass http://backend_api/openapi.json;
+            proxy_pass $backend_upstream/openapi.json;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
         }
