Revert_To_Unified_Architecture_With_Nginx

--- a/nginx.conf
+++ b/nginx.conf
@@ -34,7 +34,7 @@ http {
 
         # Use a variable to force DNS resolution at runtime for backend
         # This prevents Nginx from crashing if the backend service is not ready
-        set $backend_upstream "http://fyp-backend:8000";
+        set $backend_upstream "http://127.0.0.1:8000";
 
         # Health check endpoint for Render
         location /healthz {
