--- a/render.yaml
+++ b/render.yaml
@@ -1,13 +1,13 @@
 services:
-  # Backend Service (Python/FastAPI)
+  # Unified Service (Nginx + Python/FastAPI)
   - type: web
-    name: fyp-backend
+    name: interview_coach_prep
     env: docker
     dockerfilePath: ./Dockerfile
     plan: free
     envVars:
       - key: PORT
-        value: 8000
+        value: 80
       - key: MONGO_URI
         sync: false
       - key: DB_NAME
@@ -52,16 +52,3 @@ services:
         sync: false
       - key: CAREERJET_WIDGET_ID
         sync: false
-
-  # Frontend Service (Nginx Proxy)
-  - type: web
-    name: fyp-frontend
-    env: docker
-    dockerfilePath: ./Dockerfile.nginx
-    plan: free
-    envVars:
-      - key: BACKEND_URL
-        fromService:
-          type: web
-          name: fyp-backend
-          property: host
