--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,10 @@
 services:
-  # Unified Service (Nginx + Python/FastAPI)
+  # Unified Service (Python/FastAPI)
   - type: web
     name: interview_coach_prep
-    env: docker
-    dockerfilePath: ./Dockerfile
+    env: python
+    buildCommand: pip install -r backend/requirements.txt
+    startCommand: uvicorn backend.main:app --host 0.0.0.0 --port $PORT
     plan: free
     envVars:
       - key: PORT
