Fix_Docker_Deployment_Instability_Issues

--- a/nginx.conf
+++ b/nginx.conf
@@ -50,19 +50,16 @@ http {
         # Serve index.html for any route not matching a file, to let Vue handle routing
         location / {
             try_files $uri $uri/ /index.html;
+            add_header Cache-Control "no-store, no-cache, must-revalidate";
         }
 
         # Static assets caching
         location /static/ {
-            # Removed redundant root directive as it inherits from server block
-            # Removed try_files fallback to avoid redirect loops or blank pages
-            # If file exists, serve it. If not, 404.
+            alias /usr/share/nginx/html/static/;
             try_files $uri =404;
             expires 1d;
             access_log off;
-            
-            # Allow CORS for static assets if needed
-            add_header Access-Control-Allow-Origin *;
+            add_header Cache-Control "public, max-age=86400";
         }
 
         # API Reverse Proxy
