--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,9 @@
 services:
-  # Unified Service (Python/FastAPI)
+  # Unified Service (Nginx + Python/FastAPI)
   - type: web
     name: interview_coach_prep
-    env: python
-    buildCommand: pip install -r backend/requirements.txt
-    startCommand: uvicorn backend.main:app --host 0.0.0.0 --port $PORT
+    env: docker
+    dockerfilePath: ./Dockerfile
     plan: free
     envVars:
       - key: PORT
